Fix some spacing issues.
* Fix horizontal alignment of #content to match navigation.
* Add vertical spacing to sidebar.
* Fix use of padding & margin when just margin will do.

--- a/templates/cakephp/css/style.css
+++ b/templates/cakephp/css/style.css
@@ -127,9 +127,8 @@ code {
  */
 ul.breadcrumbs {
 	display: block;
-	padding: 6px 0 7px;
 	overflow: hidden;
-	margin: 5px 15px;
+	margin: 10px 15px 10px 0;
 }
 ul.breadcrumbs li {
 	margin: 0;
@@ -292,6 +291,9 @@ ul.breadcrumbs li.unavailable a:focus {
 #elements {
 	overflow-x: auto;
 }
+#elements ul {
+	margin-bottom: 15px;
+}
 
 #groups span {
 	position: absolute;
@@ -387,7 +389,7 @@ ul.breadcrumbs li.unavailable a:focus {
 /* Content */
 #content {
 	clear: both;
-	padding: 5px 15px;
+	margin: 10px 15px 10px 0;
 }
 
 .method-signature,
